# test-fastapi-htmx-long-polling

./: CLAUDE.md  README.md  README_test_suite.md  conftest.py  fastapi_test_suite.py  main.py  main_test_suite.py  pyproject.toml  pytest.ini  requirements_test_suite.txt  test_long_polling.py  test_multi_browser.py  zip_generator_script.py
features/: conftest.py  homepage.feature  htmx_interactions.feature  live_updates.feature
features/steps/: htmx_steps.py  live_update_steps.py  page_steps.py  test_homepage_steps.py  test_htmx_playwright_steps.py  test_htmx_steps.py  test_live_update_steps.py
templates/: home_polling.html  index.html  index_test_suite.html  items.html  notifications.html  poll_events_fragment.html  status.html
templates/partials/: items.html  poll_response.html
tests/: conftest.py  test_integration.py
tests/integration/: test_polling_app.py
tests/unit/: test_eventbus.py
