[project]
name = "test-fastapi-htmx-long-polling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.117.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "playwright>=1.55.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-bdd>=8.1.0",
    "pytest-playwright>=0.7.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]
